          & their default manager should have a method 'get_by_portable_key()'.
          See the doc-string of 'CremeEntity.portable_key()' for more details.
        # In 'creme_core.models', the models 'CremePropertyType' & 'RelationType'
          get a JSON field "extra_data" which can be used by third party code.
        # App :
            * Activities :
                - The model 'Calendar' got new fields: 'uuid', 'created', 'modified'.
                - The JavaScript component 'creme.ActivityCalendar' has been improved :
                    - The property 'rendererDelay' (number) has been added; Improve performances by limiting the calls
                      to the rendering methods. (see https://fullcalendar.io/docs/rerenderDelay)
            * Assistants :
                - Some fields 'creation_date' & 'modification_date' have been added in models.
            * Assistants :
                - The model 'EmailSending' got new fields: 'created', 'modified'.

    Breaking changes :
    ------------------
        # Deprecated stuffs which have been removed :
            - The settings 'ENUMERABLE_REGISTRATION_ERROR' has been removed.
            - In 'creme_core.constants', 'DEFAULT_CURRENCY_PK' & 'DISPLAY_CURRENCY_LOCAL_SYMBOL' have been removed.
            - In 'creme_core.core' :
                - The method 'entity_cell.EntityCellCustomField.build()' does not accept integer "value" anymore.
                - These aliases have been removed :
                  'EntityCellsRegistry', '_EntityFilterRegistry', '_EntityFilterSuperRegistry',
                  '_EnumerableRegistry', '_FunctionFieldRegistry', '_ImprintManager',
                  '_SandboxTypeRegistry', '_SettingKeyRegistry', 'ReplacersRegistry'
            - In 'creme_core.gui', these aliases have been removed :
             'ActionsRegistry', 'ActionsChain', 'actions_registry',
             '_BrickRegistry', 'BricksManager', '_BulkUpdateRegistry',